removido menu. adicionado tabs

--- a/src/app/pages/heros/hero-list/hero-list.page.html
+++ b/src/app/pages/heros/hero-list/hero-list.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [scrollEvents]="true">
   
   <ion-grid>
 
@@ -30,5 +30,27 @@
 
   </ion-grid>
 
-  
 </ion-content>
+
+<ion-toolbar>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab1">
+        <ion-icon name="calendar"></ion-icon>
+        <ion-label>{{tab1Title}}</ion-label>
+      </ion-tab-button>
+    
+      <ion-tab-button tab="tab2">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>{{tab2Title}}</ion-label>
+      </ion-tab-button>
+    
+      <ion-tab-button tab="tab3">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>{{tab1Title}}</ion-label>
+      </ion-tab-button>
+  
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-toolbar>
+
