--- a/src/app/pages/heros/hero-list/hero-list.page.html
+++ b/src/app/pages/heros/hero-list/hero-list.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [scrollEvents]="true">
+<ion-content [scrollEvents]="true" allowfullscreen>
   
   <ion-grid>
 
