--- a/src/app/pages/heros/hero-detail/hero-detail.page.scss
+++ b/src/app/pages/heros/hero-detail/hero-detail.page.scss
@@ -18,19 +18,31 @@ ion-content{
 }
 
 ion-grid {
-    height: 100%;
-    border: 2px solid black;
+    height: 100vh;
     background: #1f201f;
 }
 
-// ion-avatar{
-//     border: 2px solid #fff;
-//     border-radius: 50%;
-//     box-shadow: 0 0 5px gray;
-//     width: 25%;
-//     margin-right: 20px;
-// }
+ion-title {
+    line-height: 40px;
+    padding-left: 80px;
+    color: white;
+}
+.titleicon {
+    border: 2px solid #f6a039;
+    border-radius: 50%;
+    position: absolute;
+    top: 5px;
+    width: 50px;
+    height: 45px;
+    left: 15px;
+    bottom: 0;
+}
 
+.titleicon img {
+    width: 100%;
+    height: 41px;
+    border-radius: 50%;
+}
 .header{
     display: flex;
 
@@ -49,4 +61,27 @@ ion-grid {
 
 ion-card-title{
     color: white;
+    white-space: nowrap;
 }
+h1{
+    white-space: nowrap;
+}
+ion-label{
+    font-size: 13px;
+    white-space: nowrap;
+}
+
+.alignme{
+
+    position:absolute;
+    right:0 ;
+
+}
+
+ion-tab-bar{
+    --background: #1f201f !important;
+}
+
+// .card-hero{
+//     height: 110px;
+// }
