--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,67 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.custom-loading  {
+	--background: transparent;
+	ion-backdrop {
+		background-color: #fff;
+		opacity: 1 !important;
+	}
+	.loading-wrapper {
+		-webkit-animation: ld-vortex-out 2s ease-out infinite;
+		animation: ld-vortex-out 2s ease-out infinite;
+		animation-timing-function: cubic-bezier(0.05, 0, 3, 0.05);
+        width: 100%;
+        height: 100%;
+		background-image:  url("/assets/img/loading01.gif");
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
+		min-width: 90px;
+		min-height: 90px;
+		box-shadow: none;
+		-webkit-box-shadow: none;
+	}
+}
+
+@keyframes ld-vortex-out {
+	0% {
+		-webkit-transform: rotate(0deg) scale(0);
+		transform: rotate(0deg) scale(0);
+		opacity: 1;
+	}
+
+	60% {
+		-webkit-transform: rotate(1800deg) scale(1);
+		transform: rotate(1800deg) scale(1);
+		opacity: 1;
+	}
+
+	100% {
+		-webkit-transform: rotate(1800deg) scale(1);
+		transform: rotate(1800deg) scale(1);
+		opacity: 0;
+	}
+}
+
+
+@-webkit-keyframes ld-vortex-out {
+	0% {
+		-webkit-transform: rotate(0deg) scale(0);
+		transform: rotate(0deg) scale(0);
+		opacity: 1;
+	}
+
+	60% {
+		-webkit-transform: rotate(1800deg) scale(1);
+		transform: rotate(1800deg) scale(1);
+		opacity: 1;
+	}
+
+	100% {
+		-webkit-transform: rotate(1800deg) scale(1);
+		transform: rotate(1800deg) scale(1);
+		opacity: 0;
+	}
+}
