pequenos ajuste heros detail

--- a/src/app/component/hero-atributes/hero-atributes.component.html
+++ b/src/app/component/hero-atributes/hero-atributes.component.html
@@ -11,17 +11,17 @@
       <ion-row style="border-bottom: groove;">
         <ion-col>
           <img src='/assets/img/hero_str.png' />
-          {{ herosinfo ? herosinfo.heros_atributes[0].atributes_primary[0].str : '' }}
+          <div class="card-title">{{ herosinfo ? herosinfo.heros_atributes[0].atributes_primary[0].str : '' }}</div>
         </ion-col>
 
         <ion-col>
           <img src='/assets/img/hero_agi.png' />
-          {{ herosinfo ? herosinfo.heros_atributes[0].atributes_primary[0].agi : '' }}
+          <div class="card-title">{{ herosinfo ? herosinfo.heros_atributes[0].atributes_primary[0].agi : '' }}</div>
         </ion-col>
 
         <ion-col>
           <img src='/assets/img/hero_int.png' />
-          {{ herosinfo ? herosinfo.heros_atributes[0].atributes_primary[0].int : '' }}
+          <div class="card-title">{{ herosinfo ? herosinfo.heros_atributes[0].atributes_primary[0].int : '' }}</div>
         </ion-col>
 
       </ion-row>
