--- a/src/app/component/hero-atributes/hero-atributes.component.scss
+++ b/src/app/component/hero-atributes/hero-atributes.component.scss
@@ -5,6 +5,7 @@ ion-card-title{
 ion-label{
     font-size: 13px;
     white-space: nowrap;
+    text-align: start !important;
 }
 .alignme{
     position:absolute;
