--- a/src/app/pages/heros/hero-detail/hero-detail.page.html
+++ b/src/app/pages/heros/hero-detail/hero-detail.page.html
@@ -19,7 +19,7 @@
 
       <ion-col>
         <!-- CARD HEROS -->
-        <ion-card class="card-hero">
+        <ion-card>
           <div class="header">
             <ion-item lines="none">
               <img slot="start" [src]="herosinfo ? herosinfo.img : ''"
@@ -39,7 +39,7 @@
         </ion-card>
 
          <!-- SLIDES -->
-        <ion-slides>
+        <ion-slides fullscreen>
           <!-- SLIDE HERO ATRIBUTES -->
           <ion-slide>
               <!-- COMPONENT HERO ATRIBUTES -->
